--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,15 @@
           <artifactId>liberty-maven-plugin</artifactId>
           <version>1.2</version>
         </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.1</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
